# OldBang

./: .bscene  .gitignore  .travis.yml  AttrWidgetButton.cpp  AttrWidgetFile.cpp  AttrWidgetFloat.cpp  AttrWidgetString.cpp  AttributeWidget.cpp  Bang  Bang.pro  Bang.sln  Bang.vcxproj  BangCommon.pri  BuildMakefile.pro  CMakeLists.txt  ComponentWidget.cpp  DragDropAgent.cpp  ExplorerDirTree.cpp  FileDialog.cpp  InspectorFileSW.cpp  InspectorFloatSW.cpp  InspectorPartFileSW.cpp  InspectorPartFloatSW.cpp  InspectorPartSW.cpp  InspectorSW.cpp  LICENSE  README.md  compile.sh  fullCompile.sh  fullRun.sh  initEnvironment.sh  nohup.out  ref-cpp-class-name  run.sh  test  updateUI.sh
Assets/: .astylerc
Assets/Behaviours/: LookAtLuigi.cpp  LookAtLuigi.h  RandomScale.cpp  RandomScale.h  TestBehaviour.cpp  TestBehaviour.h  TestCameraBehaviour.cpp
Assets/Engine/: EditorWindow.ui  QtResources.qrc  WindowMain.ui
Assets/Fonts/: .Roboto.ttf.import  .Ubuntu.ttf.import
Assets/Icons/: .Check.png.import  .Error.png.import  .Info.png.import  .LightBulb.png.import
Assets/Images/: .LogoBang_B.svg.import
Assets/Materials/: .G_Default.bmat.import  .G_GizmosUnLightedScene.bmat.import  G_GizmosLightedOverlay.bmat  G_GizmosUnLightedOverlay.bmat  Missing.bmat  Transparent.bmat  concrete.bmat  grass.bmat  luigiMaterial.bmat  red.bmat  testMaterial.bmat  testMaterial2.bmat  victor.bmat  wood.bmat
Assets/Meshes/: .Camera.obj.import  .Cone.obj.import  Gandalf.bmesh  boyMesh.bmesh  luigiMesh.bmesh
Assets/Prefabs/: Boy.bprefab  Luigi.bprefab  Room.bprefab  Scenario.bprefab
Assets/Scenes/: Simple.bscene  test.bscene  test2.bscene  tmp.bscene
Assets/Shaders/: .Blur.frag.import  .ByPassTexture.frag.import  .Cartoon.frag.import  .G_Default.vert.import  .G_Template.vert.import  .GrayScale.frag.import  .PP_FXAA.frag.import  .PP_PointLight.frag.import  .SSAOBlur.frag.import  .SelectionBuffer.frag.import  Blur.frag  G_Default.vert  GrayScale.frag  PP_Default.vert  PP_FXAA.frag  PP_PointLight.frag  SSAO.frag  SSAOApply.frag  SSAOBlur.frag  SelectionBuffer.frag
Assets/Textures/: carpetTexture.btex2d  luigiTexture.btex2d  victor.btex2d  woodTexture.btex2d
BangDataStructures/: BangDataStructures.pro
BangLib/: BangLib.pro
BangMain/: BangMain.pro
BangPreprocessor/: BP_StageReader_cpp_UserBehaviours_elseifs.bp  BangPreprocessor  BangPreprocessor.pro  BangPreprocessorMain.cpp  MainBangPreprocessor.cpp  main.cpp
BangPreprocessor/GeneratedFiles/: BP_SceneReader_cpp_UserBehaviours_elseifs.bp
CMakeIncludes/: CMakeCheckInputParams.cmake  CMakeDependencies.cmake  CMakeFlags.cmake  CMakeMacros.cmake  FindSDL2_ttf.cmake
Domain/: IToString.h  Idable.h  Logger.h  Material.h  Mesh.cpp  Mesh.h  MeshRenderer.cpp  MeshRenderer.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h  main.cpp
Domain/Shaders/: pass.frag  pass.vert
EngineAssets/: EditorWindow.ui  QtResources.qrc  SelectProjectWindow.ui
EngineAssets/Icons/: MaterialAssetIcon.psd  MeshAssetIcon.psd  PrefabAssetIcon.psd
EngineAssets/Materials/: D2G_Default.bmat  D2G_RotationAxisLine.bmat  G_Default.bmat  G_DefaultNoSP.bmat  G_RotationAxisLine.bmat  Missing.bmat  PR_AmbientLight_Screen.bmat  PR_DirectionalLight_Screen.bmat  PR_PointLight_Screen.bmat  PR_SelectionEffect.bmat  RenderGBufferToScreen.bmat  SP_AmbientLight_Screen.bmat  SP_DirectionalLight_Screen.bmat  SP_PointLight_Screen.bmat  SP_SelectionEffect.bmat
EngineAssets/Meshes/: Camera.bmesh  Cube.bmesh  Plane.bmesh  Pyramid.bmesh  Sphere.bmesh  UIPlane.bmesh
EngineAssets/Shaders/: Blur.frag_pp  Cartoon.frag_pp  D2G_Default.frag  D2G_Missing.frag  D2G_RotationAxisLine.frag  GSP_Default.frag  G_Default.bshaderprogram  G_Default.frag  G_Default.vert_g  G_Missing.frag  G_RotationAxisLine.frag  GrayScale.frag_pp  InvertColors.frag_pp  Outline.frag_pp  PR_AmbientLight.frag  PR_DirectionalLight.frag  PR_PointLight.frag  PR_SelectionEffect.frag  RenderGBufferToScreen.frag  SP_Default.frag  SP_Default.vert  SP_DirectionalLight.frag  SP_DirectionalLight.frag_pp  SP_FXAA.frag  SP_FXAA.frag_pp  SP_PointLight.frag  SP_ScreenPass.vert  SP_SelectionEffect.frag  SP_SelectionEffect.frag_pp  SelectionBuffer.frag  SelectionBuffer.vert
EngineAssets/Textures/: CameraIcon.btex2d  DefaultUIImageTexture.btex2d  RectTransformAnchor.btex2d
EngineAssets/qdarkstyle/: style.qrc  style.qss
Scripts/: createClass.sh  generateAllHeader.sh
Scripts/BuildPackage/: .gitignore  CMakeLists.txt  buildPackage.sh
View/: Canvas.cpp  Canvas.h  WindowMain.h  WindowMain.ui
config/: RecentProjects.cfg
include/Bang/: AABox.h  AARect.h  ALAudioSource.h  Alignment.h  All.h  AnonymousAudioPlayer.h  AnyIterator.h  Application.h  Array.h  Array.tcc  AspectRatioMode.h  Asset.h  AssetFileCreator.h  AssetsManager.h  AttrWidgetBool.h  AttrWidgetButton.h  AttrWidgetColor.h  AttrWidgetEnum.h  AttrWidgetFile.h  AttrWidgetFloat.h  AttrWidgetInt.h  AttrWidgetString.h  AttrWidgetVectorFloat.h  AttributeWidget.h  AudioClip.h  AudioClipAssetFile.h  AudioClipAssetFileInspectable.h  AudioClipFile.h  AudioFile.h  AudioFileInspectable.h  AudioListener.h  AudioManager.h  AudioParams.h  AudioPlayerRunnable.h  AudioSource.h  Axis.h  AxisFunctions.h  BFile.h  BPProperty.h  BPReflectedStruct.h  (+429 more)
include/Domain/: Behaviour.h  Camera.h  Entity.h  Framebuffer.cpp  Framebuffer.h  GBuffer.cpp  GBuffer.h  GLBindable.h  GLIdable.h  IStageEventListener.h  Logger.h  Material.h  Mesh.h  Part.h  (+22 more)
proj/: Bang.pro  BangCommon.pri
res/: WindowMain.h  WindowMain.ui
scripts/: captureArgs.sh  clean.sh  cleanCMakeGargabeFromRoot.sh  cleanPreprocessedHeaders.sh  compile.sh  compileExecutables.sh  compileLibs.sh  compileTargets.sh  coverity.sh  createClass.sh  createHeaders.sh  createIncludeHeader.sh  createIncludeHeaders.sh  fullCompile.sh  fullRun.sh  install.sh  messages.sh  preprocessHeaders.sh  qmakeAll.sh  ref-cpp-class-name  removeMakefiles.sh  run.sh  uninstall.sh  updateUI.sh
src/: Bang.h  EditorMainOld.cpp  GameMain.cpp  Main.cpp  MainBang.cpp  MainBangPreprocessor.cpp  MainGame.cpp  MainGameBuilder.cpp  main.cpp
(+2552 files in other folders)
